--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,12 @@ proc-macro = true
 
 [dependencies]
 attribute-derive = "0.2.2"
-itertools = "0.10.3"
-proc-macro-error = "1"
 proc-macro2 = "1.0.36"
-quote = "1"
+quote = "1.0.16"
 syn = { version = "1.0.86", features = ["full"] }
+
+[dev-dependencies]
+once_cell = "1.10.0"
+trybuild = "1.0.56"
+
+[features]
