--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ syn = { version = "1.0.86", features = ["full"] }
 [dev-dependencies]
 once_cell = "1.10.0"
 trybuild = "1.0.56"
+anymap2 = "0.13.0"
 
 [features]
