--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,17 +2,34 @@
 name = "michie"
 version = "0.1.0"
 edition = "2021"
+description = "An attribute macro that adds memoization to a function (pronounced /'mikɪ/)"
+repository = "https://github.com/mobusoperandi/michie"
+license = "MIT"
+keywords = [
+    "memoization",
+    "memoisation",
+    "memoize",
+    "memoise",
+    "cache",
+]
+categories = [
+    "caching",
+]
+include = [
+    "/src/**/*.rs",
+    "/tests/**/*.rs",
+]
 
 [lib]
 proc-macro = true
 
 [dependencies]
-attribute-derive = "0.2.2"
-proc-macro2 = "1.0.36"
-quote = "1.0.16"
-syn = { version = "1.0.86", features = ["full"] }
+attribute-derive = "^0.2.2"
+proc-macro2 = "^1.0.36"
+quote = "^1.0.16"
+syn = { version = "^1.0.86", features = ["full"] }
 
 [dev-dependencies]
-trybuild = "1.0.56"
+trybuild = "^1.0.56"
 
 [features]
