--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Update toolchain
         run: rustup update
+      - uses: Swatinem/rust-cache@v1
       - name: Test
         run: cargo test
       - name: Clippy
