--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,26 +6,15 @@ on:
   pull_request:
     branches: [master]
 
-env:
-  CARGO_TERM_COLOR: always
-
 jobs:
   all:
     runs-on: ubuntu-latest
-
-    env:
-      RUSTFLAGS: --deny warnings
 
     steps:
       - uses: actions/checkout@v3
       - name: Update toolchain
         run: rustup update
       - uses: Swatinem/rust-cache@v1
-      - name: Test
-        run: cargo test
-      - name: Clippy
-        run: cargo clippy
-      - name: Check formatting
-        run: cargo fmt --check
-      - name: Make documentation
-        run: cargo doc
+      - run: cargo install cargo-make
+      - run: cargo make ci
+
