--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
       - name: Update toolchain
         run: rustup update
       - uses: Swatinem/rust-cache@v1
+        with:
+          cache-on-failure: true
       - run: cargo install cargo-make
       - run: cargo make ci
 
