--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Update toolchain
-        run: rustup update
+      - run: rustup update
       - uses: Swatinem/rust-cache@v1
         with:
           cache-on-failure: true
