run workflow on PRs against any branch

--- a/.github/workflows/on-push-to-master-or-pr-branch.yml
+++ b/.github/workflows/on-push-to-master-or-pr-branch.yml
@@ -3,8 +3,7 @@ name: On push to master or pull request branch
 on:
   push:
     branches: [master]
-  pull_request:
-    branches: [master]
+  pull_request: {}
 
 jobs:
   cargo-make-ci:
