parallel cargo-make tasks

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -6,11 +6,11 @@ CARGO_TERM_COLOR = "always"
 
 [tasks.pre-commit]
 env = { RUSTFLAGS = "--deny warnings" }
-dependencies = ["test", "clippy", "doc", "check_fmt"]
+run_task = { name = ["test", "clippy", "doc", "check_fmt"], parallel = true }
 
 [tasks.ci]
 env = { RUSTFLAGS = "--deny warnings" }
-dependencies = ["test", "clippy", "doc", "check_fmt"]
+run_task = { name = ["test", "clippy", "doc", "check_fmt"], parallel = true }
 
 [tasks.test]
 command = "cargo"
