--- a/.github/workflows/on-push-to-master-or-pull-request.yml
+++ b/.github/workflows/on-push-to-master-or-pull-request.yml
@@ -15,6 +15,6 @@ jobs:
       - uses: Swatinem/rust-cache@v1
         with:
           cache-on-failure: true
-      - uses: davidB/rust-cargo-make@v1
+      - run: cargo install cargo-make
       - run: cargo make ci
 
