--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ members = [
 michie-macro = { path = "macro", version = "0.2.0" }
 
 [dev-dependencies]
+cargo-make = "0.35.12"
 itertools = "0.10.3"
 trybuild = "^1.0.56"
 
