gitignore /.bin and check in ci

--- a/.github/workflows/on-push-to-master-or-pull-request.yml
+++ b/.github/workflows/on-push-to-master-or-pull-request.yml
@@ -21,4 +21,5 @@ jobs:
           key: ${{ runner.os }}_cargo-run-bin_${{ hashFiles('Cargo.toml') }}
       - run: cargo install cargo-run-bin
       - run: cargo bin makers ci
+      - run: test -z `git ls-files --exclude-standard --others`
 
