--- a/Makefile.toml
+++ b/Makefile.toml
@@ -33,7 +33,7 @@ args = ["fmt", "--check"]
 script = "$LINT_COMMIT_MSG_FROM_STDIN"
 
 [tasks.lint_pr_commit_msgs]
-condition = { env_set = ["GITHUB_BASE_REF"] }
+condition = { env_true = ["GITHUB_BASE_REF"] }
 script = '''
 # workaround for https://gitlab.com/DeveloperC/conventional_commits_linter/-/issues/1
 commits=$(git rev-list --skip=1 origin/$GITHUB_BASE_REF..HEAD)
