docs: fix ci badge
closes #179

Co-authored-by: Shahar Dawn Or <mightyiampresence@gmail.com>
Co-authored-by: Pranav Kesavarapu <pranavkesavarapu@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ michie-macro = { path = "macro", version = "0.2.0" }
 cargo-make = "0.35.12"
 conventional_commits_linter = "0.12.1"
 itertools = "0.10.3"
+regex = "1.5.5"
 trybuild = "^1.0.56"
 
 [features]
