--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,10 @@ cargo-make = "0.35.12"
 cargo_toml = "0.11.5"
 conventional_commits_linter = "0.12.1"
 itertools = "0.10.3"
+markdown = "0.3.0"
+markdown-toc = "0.2.0"
 regex = "1.5.5"
+sd = "0.7.6"
 semver = "1.0.9"
 trybuild = "1.0.56"
 
