--- a/Makefile.toml
+++ b/Makefile.toml
@@ -38,6 +38,7 @@ args = ["fmt", "--check"]
 [tasks.lint_commit_msg_from_stdin]
 script = '''
 #!/usr/bin/env bash
+set -euxo pipefail
 $LINT_COMMIT_MSG_FROM_STDIN
 '''
 
@@ -45,8 +46,10 @@ $LINT_COMMIT_MSG_FROM_STDIN
 condition = { env_true = ["GITHUB_BASE_REF"] }
 script = '''
 #!/usr/bin/env bash
+set -euxo pipefail
 # workaround for https://gitlab.com/DeveloperC/conventional_commits_linter/-/issues/1
 commits=$(git rev-list --skip=1 origin/$GITHUB_BASE_REF..HEAD)
+exit_code=0
 for commit in $commits; do 
   git show --no-patch --format=%B $commit | \
   $LINT_COMMIT_MSG_FROM_STDIN || \
@@ -58,6 +61,7 @@ exit $exit_code
 [tasks.table_of_contents]
 script = '''
 #!/usr/bin/env bash
+set -euxo pipefail
 toc=$(cargo bin md-toc --header "# Table of contents" README.md)
 MARKER='<!-- TOC -->'
 cargo bin sd "$MARKER[\S\s]*$MARKER" $"$MARKER$toc\n$MARKER" README.md
@@ -66,6 +70,7 @@ cargo bin sd "$MARKER[\S\s]*$MARKER" $"$MARKER$toc\n$MARKER" README.md
 [tasks.no_modified]
 script = '''
 #!/usr/bin/env bash
+set -euxo pipefail
 if ! git diff --exit-code; then
   echo "modified files detected"
   exit 1
@@ -75,6 +80,7 @@ fi
 [tasks.no_untracked]
 script = '''
 #!/usr/bin/env bash
+set -euxo pipefail
 if [[ `git ls-files --exclude-standard --others` ]]; then
   echo "untracked files detected"
   exit 1
