--- a/Makefile.toml
+++ b/Makefile.toml
@@ -14,7 +14,7 @@ env = { RUSTFLAGS = "--deny warnings" }
 run_task = { name = ["test", "clippy", "doc", "check_fmt", "lint_pr_commit_msgs"], parallel = true }
 
 [tasks.ci_post]
-run_task = { name = ["no_untracked", "no_modified"] }
+run_task = { name = ["no_untracked", "no_modified", "release"] }
 
 [tasks.ci]
 run_task = { name = ["ci_main", "ci_post"] }
@@ -85,4 +85,19 @@ if [[ `git ls-files --exclude-standard --others` ]]; then
   echo "untracked files detected"
   exit 1
 fi
+'''
+
+[tasks.release]
+condition = { env = { "GITHUB_REF_TYPE" = "branch", "GITHUB_REF_NAME" = "master" } }
+script = '''
+#!/usr/bin/env bash
+set -euxo pipefail
+npm install --global \
+    semantic-release@19 \
+    @semantic-release/exec@6 \
+    @semantic-release/changelog@6 \
+    @semantic-release/git@10 \
+    conventional-changelog-conventionalcommits@5
+
+semantic-release
 '''
