fix: pin macro dep
Co-authored-by: Pranav Kesavarapu <pranavkesavarapu@gmail.com>
Co-authored-by: Shahar Dawn Or <mightyiampresence@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "michie"
-version ="0.2.2"
+version = "0.2.2"
 edition = "2021"
 description = "An attribute macro that adds memoization to a function (pronounced /'mikɪ/)"
 repository = "https://github.com/mobusoperandi/michie"
@@ -28,9 +28,10 @@ members = [
 ]
 
 [dependencies]
-michie-macro = { path = "macro", version ="0.2.2"}
+michie-macro = { path = "macro", version = "=0.2.2" }
 
 [dev-dependencies]
+cargo-edit = "0.9.1"
 cargo-make = "0.35.12"
 cargo_toml = "0.11.5"
 conventional_commits_linter = "0.12.1"
