--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -29,7 +29,7 @@ plugins:
   - "@semantic-release/github"
   - - "@semantic-release/exec"
     - verifyConditionsCmd: cargo bin semantic-release-rust verify-conditions
-      prepareCmd: cargo bin semantic-release-rust prepare ${nextRelease.version} && cargo update --package michie --package michie-macro
+      prepareCmd: cargo bin cargo-set-version --workspace ${nextRelease.version} && cargo update --package michie --package michie-macro
       publishCmd: cargo publish --package michie-macro && cargo publish --package michie
   - - "@semantic-release/git"
     - assets:
