--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ cargo-make = "0.35.12"
 cargo_toml = "0.11.5"
 conventional_commits_linter = "0.12.1"
 itertools = "0.10.3"
+jql = "4.0.4"
 markdown = "0.3.0"
 markdown-toc = "0.2.0"
 regex = "1.5.5"
