--- a/Makefile.toml
+++ b/Makefile.toml
@@ -102,7 +102,7 @@ npm install --global \
 semantic-release
 '''
 
-[tasks.publish]
+[tasks.publish_crates]
 script = '''
 #!/usr/bin/env bash
 set -euxo pipefail
