--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "michie"
 version = "0.2.12"
 edition = "2021"
-description = "An attribute macro that adds memoization to a function (rhymes with Mickey)"
+description = "An attribute macro that adds memoization to a function (sounds like Mickey)"
 repository = "https://github.com/mobusoperandi/michie"
 license = "MIT"
 keywords = [
