--- a/.releaserc.yaml
+++ b/.releaserc.yaml
@@ -27,10 +27,7 @@ plugins:
             section: Testing
   - "@semantic-release/changelog"
   - "@semantic-release/github"
-  - - "@semantic-release/exec"
-    - verifyConditionsCmd: cargo bin semantic-release-rust verify-conditions
-      prepareCmd: cargo bin cargo-set-version --workspace ${nextRelease.version} && cargo update --package michie --package michie-macro
-      publishCmd: cargo publish --package michie-macro && cargo publish --package michie
+  - "@semantic-release-cargo/semantic-release-cargo"
   - - "@semantic-release/git"
     - assets:
         - CHANGELOG.md
