--- a/Makefile.toml
+++ b/Makefile.toml
@@ -92,7 +92,7 @@ script = '''
 set -euxo pipefail
 npm install --global \
     semantic-release@19 \
-    @semantic-release/exec@6 \
+    @semantic-release-cargo/semantic-release-cargo@2 \
     @semantic-release/changelog@6 \
     @semantic-release/git@10 \
     conventional-changelog-conventionalcommits@5
