--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ jobs:
         with:
           fetch-depth: 0 # for commit linting and semantic-release
           persist-credentials: false
+      - uses: webiny/action-conventional-commits@v1.1.0
       - run: rustup update
       - uses: actions/cache@v3
         with:
